# bazel_exp

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
makefile_hello/: BUILD.bazel  Makefile  hello.cpp  hello.h
